# AI-Catering-Assistant

./: README.md  agent.py  data_loader.py  main.py  model.py  pyproject.toml  search.py  supervisor.py
agents/: Comparison_Agent.py  Cost_Estimation_Agent.py  Interaction_Agent.py  Planner_Agent.py  Recommendation_Agent.py  Search_Agent.py  comparison_agent.py  planner_agent.py  recommendation_agent.py  search_agent.py
data/: North_India_Caterers_Plus_100_No_Duplicates.xlsx
data/html/: Ahmedabad gujrat.html  DELHI.html  GUJRAT.html  HARYANA.html  MAHARASHTRA.html  Sheet1.html  UTTAR PRADESH..html  adjacent ncr.html  agra UP.html  ambala.html  amritsar punjab.html  bareilly uttar pradesh.html  bengaluru.html  bhatinda punjab.html  central delhi.html  central gujrat.html  central karnataka.html  central tamil nadu.html  chandigarh.html  chennai north tamil nadu.html  coastal karnataka.html  dharamshala himachal pradesh.html  dheradun uttrakhand.html  east&central delhi.html  faridabad haryana.html  gurugram haryana.html  haldwani uttrakhand.html  hisar haryana.html  hydrabad south india.html  jaipur rajisthan.html  jalandhar punjab.html  jammu j&k.html  jodhpur rajisthan.html  kanpur uttar pradesh.html  karnal haryana.html  (+43 more)
database/: config.py  create_indexes.py  import_html.py  main.py  mongo_connection.py  pyproject.toml  query.py  remove_duplicates.py  utils.py
resources/: sheet.css
services/: data_loader.py
tools/: comparison_tools.py  estimation_tools.py  planner_tool.py  recommendation_tools.py  search_tools.py  tools.py  validation_tools.py
