[project]
name = "cateringservice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.139.0",
    "langchain>=1.3.13",
    "lxml>=6.1.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.51.0",
]
